<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280.0dip"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60.0dip"
        android:background="#F0F0F0"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20.0dip"
            android:paddingRight="10.0dip"
            android:src="@drawable/dialog_title_setting_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/network_hint"
            android:textColor="#858585" />
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1.0dip"
        android:background="#E1E1E1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F8F8"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50.0dip"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20.0dip"
                android:text="@string/please_open_network" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120.0dip"
            android:orientation="horizontal"
            android:paddingLeft="20.0dip"
            android:paddingRight="20.0dip" >

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/btn_wifi_anim_iamge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@anim/wifianim" />

                <ImageButton
                    android:id="@+id/btn_wifi_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/combox" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wifi" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:background="@drawable/url_list_split_line" />

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/btn_network_anim_iamge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@anim/networkanim" />

                <ImageButton
                    android:id="@+id/btn_network_on_off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/combox" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/network" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60.0dip"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/net_close"
                android:layout_width="120.0dip"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_netword"
                android:text="@string/close"
                android:textColor="#858585" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>